fixing issue: Wrong width of Brain Games block on homepage.

--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -6,7 +6,7 @@
   margin-top: 29px;
   background: white;
   border: 1px solid red;
-  width: 258px;
+  width: 257px;
   height: 268px;
   position: relative;
   padding: 5px;
